<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengjin.funsettingsuitest.activity.ActivityDemo">

    <EditText
        android:id="@+id/editor_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editor_user_name_hint" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok" />

    <TextView
        android:id="@+id/text_hello_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_hello" />

    <Button
        android:id="@+id/button_http_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_http_test" />

    <TextView
        android:id="@+id/text_http_test_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_http_test" />

    <Button
        android:id="@+id/button_leak_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_leak_test"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_leak_test_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_leak_test" />

</LinearLayout>
